# ETL-RAG

./: .gitignore  .gitmodules  test.yml
.github/workflows/: test.yml
cpp_producer/: .gitignore  CMakeLists.txt
cpp_producer/include/services/: kafka_producer.h
cpp_producer/src/: main.cpp
cpp_producer/src/services/: kafka_producer.cpp
etl/: .env  pyproject.toml  sales_dag.py
load_go/: .env  go.mod  go.sum  main.go
python_consumer/: .env.example  .gitignore  main.py  requirements.txt
python_consumer/src/: consumer_service.py  model_communicator_service.py  producer_service.py
source/: 2025-01-05.json  generate_fake_transaction_data.py  pyproject.toml
source/tests/: generator_working.py
stage/: 2025-01-05.csv
transform/: 2025-01-05.csv
